# supr

./: .clang-format  .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  rakefile.rb  xmake.lua
src/: app.rs  cli.rs  cli.zig  collect.rs  config.rs  data.rs  fs.rs  lib.rs  log.rs  main.cpp  main.rs  main.zig  naft.rs  run.rs  serve.rs  util.rs
src/supr/: App.cpp  App.hpp  Options.cpp  Options.hpp
src/supr/file/: Each.hpp
src/supr/filesystem/: EachPath.hpp
tests/: util.rs
