[package]
name = "supr"
version = "0.1.0"
edition = "2021"
authors = ["Geert Fannes <geert.fannes@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.14"
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
ignore = "0.4.22"
serde = { version = "1.0.202", features = ["serde_derive"] }
sha2 = "0.10.8"
